--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^5.1.0",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^3.1.9",
     "socket.io": "^4.8.1",
     "socketio-file-upload": "^0.7.3"
