--- a/package.json
+++ b/package.json
@@ -3,21 +3,29 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mongoose": "^8.13.2",
-    "multer": "^1.4.5-lts.2",
+    "gridfs-stream": "^1.1.1",
+    "mongoose": "^8.13.3",
+    "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
-    "nodemon": "^3.1.9",
-    "socket.io": "^4.8.1",
-    "socketio-file-upload": "^0.7.3"
-  }
+    "socket.io": "^4.8.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/1-apex/chat-server.git"
+  },
+  "bugs": {
+    "url": "https://github.com/1-apex/chat-server/issues"
+  },
+  "homepage": "https://github.com/1-apex/chat-server#readme",
+  "description": ""
 }
